created components and add input text to body component with style

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,5 +11,10 @@
 
 #root {
   font-family: "Vazir";
-  background-color: azure;
+  font-weight: 500;
+  background-color: #fafafa;
+  color: #334155;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
