--- a/src/App.scss
+++ b/src/App.scss
@@ -17,12 +17,36 @@
     .currencyConverter__body{
         width: 100%;
         padding: 10px;
-        .currencyConverter__input{
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+        .currencyConverter__input-amount{
             width: 100%;
             height: 36px;
             border: 1px solid #334155;
             border-radius: 8px;
             padding: 10px;
+            &::placeholder{
+                font-family: "Vazir";
+            }
+        }
+        .currencyConverter__input-unit{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 100%;
+            .currencyConverter__select{
+                font-family: "Vazir";
+                font-weight: 500;
+                font-size: 1rem;
+                background-color: #fafafa;
+                border: 2px solid #6b7280;
+                color: #4b5563;
+                border-radius: 10px;
+                width: 70%;
+                height: 36px;
+                padding: 0 10px;
+            }
         }
     }
 }
