--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
     max-height: 600px;
     width: 100%;
     margin: 20px 10px;
+    overflow-y: scroll;
     box-shadow: 0px 0px 58px -4px rgba(0,0,0,0.75);
     .currencyConverter__header{
         margin: 20px;
