--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
     max-height: 600px;
     width: 100%;
     margin: 20px 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
     box-shadow: 0px 0px 58px -4px rgba(0,0,0,0.75);
     .currencyConverter__header{
         margin: 20px;
@@ -21,7 +21,8 @@
         display: flex;
         flex-direction: column;
         row-gap: 30px;
-        .currencyConverter__input-amount{
+        .currencyConverter__input-amount,
+        .currencyConverter__input-rate{
             width: 100%;
             height: 36px;
             border: 1px solid #334155;
@@ -47,7 +48,20 @@
                 width: 70%;
                 height: 36px;
                 padding: 0 10px;
+                .currencyConverter__option{
+                    font-family: "Vazir";
+                    font-weight: 500;
+                    font-size: 20px;
+                    padding: 10px;
+                    text-align: center;
+                }
             }
+        }
+        .currencyConverter__result{
+            padding: 10px;
+            border: 1px solid #334155;
+            border-radius: 8px;
+            height: 76px;
         }
     }
 }
